// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui actions: emitError 1`] = `
Object {
  "error": true,
  "meta": null,
  "payload": Object {
    "message": "TEST_ERROR_MESSAGE.",
  },
  "type": "EMIT_ERROR",
}
`;

exports[`ui actions: startFetching 1`] = `
Object {
  "type": "START_FETCHING",
}
`;

exports[`ui actions: stopFetching 1`] = `
Object {
  "type": "STOP_FETCHING",
}
`;
